CUI-188 Card Board: fixed card look that got broken by some previous card refactoring and adapted the CSS and markup to align with the way the other cards are built.

--- a/source/less/includes/variables.less
+++ b/source/less/includes/variables.less
@@ -287,8 +287,10 @@
 
 // Cards
 @card-background-color: rgb(255, 255, 255);
+@card-background-inverted: rgb(170, 170, 170);
 @card-title-color: rgba(0, 0, 0, 0.6); // The text is transparent to make it look right when selected
 @card-text-color: rgba(0, 0, 0, 0.4);  // The text is transparent to make it look right when selected
+@card-text-color-inverted: rgb(255, 255, 255);
 @card-image-separator: rgba(0, 0, 0, 0.1);
 @card-selection-color: rgb(82,165,227);
 @card-stack-offset: 4*@px;
@@ -315,7 +317,6 @@
 @card-list-checkbox-background: rgb(235, 235, 235);
 @card-list-selection-color: rgb(187, 210, 229);
 @card-list-header-triangle: rgb(153, 153, 153);
-@card-board-header-background: rgb(170, 170, 170);
 @card-board-header-border: rgb(187, 187, 187);
 @card-board-preview-background: rgb(187, 187, 187);
 @card-asset-image-background: rgba(0, 0, 0, 0.13);
